fix(input): text color contrast

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,9 @@
 .light {
   --text-primary: #0c0c0c;
   --text-secondary: #767676;
+	--text-input: #0c0c0c;
   --background: #ffffff;
-  --card: #f4f4f4;
+  --card: #eeeeee;
   --inactive: #999999;
   --border: #18181820;
 	--button: #EEEEEE;
@@ -18,6 +19,7 @@
 .dark {
   --text-primary: #f5f5f5;
   --text-secondary: #cccccc;
+	--text-input: #0c0c0c;
   --background: #181818;
   --card: #282828;
   --inactive: #bbbbbb;
